--- a/Erp.WebApp/packages.config
+++ b/Erp.WebApp/packages.config
@@ -19,7 +19,13 @@
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.3.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.3.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Authorization" version="2.3.0" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Connections.Abstractions" version="9.0.8" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.SignalR.Common" version="9.0.8" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.SignalR.Core" version="1.2.0" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.SignalR.Protocols.Json" version="1.2.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.8" targetFramework="net48" />
+  <package id="Microsoft.Bcl.TimeProvider" version="8.0.1" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net48" />
   <package id="Microsoft.Extensions.Caching.Abstractions" version="9.0.8" targetFramework="net48" />
   <package id="Microsoft.Extensions.Caching.Memory" version="9.0.8" targetFramework="net48" />
@@ -27,10 +33,16 @@
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="9.0.8" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyInjection" version="9.0.8" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="9.0.8" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Features" version="9.0.8" targetFramework="net48" />
   <package id="Microsoft.Extensions.Logging" version="9.0.8" targetFramework="net48" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="9.0.8" targetFramework="net48" />
   <package id="Microsoft.Extensions.Options" version="9.0.8" targetFramework="net48" />
   <package id="Microsoft.Extensions.Primitives" version="9.0.8" targetFramework="net48" />
+  <package id="Microsoft.Identity.Abstractions" version="9.3.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Abstractions" version="8.13.1" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="8.13.1" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Logging" version="8.13.1" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Tokens" version="8.13.1" targetFramework="net48" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.12" targetFramework="net48" />
   <package id="Microsoft.Owin" version="4.2.3" targetFramework="net48" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.3" targetFramework="net48" />
@@ -46,10 +58,17 @@
   <package id="System.CodeDom" version="9.0.8" targetFramework="net48" />
   <package id="System.Collections.Immutable" version="9.0.8" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="9.0.8" targetFramework="net48" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="8.13.1" targetFramework="net48" />
+  <package id="System.IO.Pipelines" version="9.0.8" targetFramework="net48" />
+  <package id="System.Management" version="9.0.8" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
+  <package id="System.Net.Sockets" version="4.3.0" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Reflection.Emit" version="4.7.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.Pkcs" version="8.0.1" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="9.0.8" targetFramework="net48" />
+  <package id="System.Text.Json" version="9.0.8" targetFramework="net48" />
   <package id="System.Threading.Channels" version="9.0.8" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
