--- a/Erp.WebApp/Web.config
+++ b/Erp.WebApp/Web.config
@@ -28,6 +28,8 @@
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
+    <!-- Show detailed errors even for remote requests while we debug 500s -->
+    <customErrors mode="Off" />
   </system.web>
   <runtime>
     <!-- Your assembly bindings go here -->
@@ -229,11 +231,14 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<system.webServer>
+  <system.webServer>
+    <!-- Ensure IIS does not replace MVC error responses with its own -->
+    <httpErrors existingResponse="PassThrough" />
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-  </system.webServer></configuration>
+  </system.webServer>
+</configuration>
